# ai-poc-descente

./: .gitignore  AGENTS.md  DEPLOY_OCI.md  Guide_Deploy_OCI.md  Guide_Private_CA_HTTPS.md  Guide_Select-AI.md  Guide_menu.md  Guide_질문관리.md  Prerequisites.md  README.md  asta-loop.yaml.example  asta-quality-agent.yaml.example  config.yaml.example  models.txt  models.txt.example  pyproject.toml
.agent-handoff/: CONTEXT.md
app/: asta_audit.py  asta_runtime_gates.py  asta_source_direct.py  config.py  main.py
docs/: AI_SQL_TUNING_ASSISTANT_MANUAL.md  AI_SQL_TUNING_ASSISTANT_PROGRAM_SPEC.md  ASTA_LOOP_AGENT.md  ASTA_QUALITY_AGENT.md  ASTA_SQL_TUNING_IMPROVEMENT_HISTORY.md  OADT2_ASTA_ARCHITECTURE.md  README.md  asta_mindmap.md  asta_source_execution_flow.md  asta_technical_mindmap.html  asta_technical_mindmap.md
reports/: claude_realasta_remediation_20260712.md
scripts/: asta-quality-agent.service  asta-quality-agent.timer  source_runtime_xplan.py
static/: index.html  menu_presets.json.example
tests/: test_asta_adb_async_submit_contract.py  test_asta_adb_ords_static_contracts.py  test_asta_advisor_default_off.py  test_asta_batch_samples.py  test_asta_before_evidence_policy.py  test_asta_bind_plan_stability.py  test_asta_blocked_candidate_report_contract.py  test_asta_candidate_repair_and_ora_ui.py  test_asta_clob_json_persistence.py  test_asta_collapsible_sections.py  test_asta_contract_hardening_codex.py  test_asta_dba_review_contract.py  test_asta_developer_friendly_messages.py  test_asta_developer_manual_contract.py  test_asta_dominant_target_prompt_contract.py  (+52 more)
(+104 files in other folders)
