[project]
name = "project"
version = "0.1.0"
description = "Oracle AI Database Test Tool — SELECT AI / AI Agent Team PoC"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = [
    "fastapi>=0.136.3",
    "oracledb>=4.0.1",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.48.0",
]

[tool.pytest.ini_options]
# 저장소 루트를 import 경로에 추가해 `app`/`tools` 패키지를 PYTHONPATH 없이 수집한다.
# 이로써 README의 `uv run --with pytest pytest -q`가 루트에서 그대로 동작한다.
pythonpath = ["."]
